loading na login

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -152,7 +152,7 @@
                 </md-button>
                 <span breadcrumb></span>
                 <span flex></span>
-                {{localUser.name}}
+                <a href="#/korisnik">{{localUser.name}}</a>
                 <!--<div>-->
                 <!--<span uib-popover="myPopoverTemplate.html"-->
                       <!--popover-placement="bottom-right">-->
