--- a/src/main/resources/static/js/app/korisnik.html
+++ b/src/main/resources/static/js/app/korisnik.html
@@ -6,9 +6,9 @@
 <!--</div>-->
 <md-content layout="column" flex
             ng-controller="korisnikPageController">
-    <h1>{{poruka}}</h1>
-    <h2>heeeeeeeeeeeeeeeeeeeeeeeeeeeej</h2>
-    <h2>{{username}}</h2>
+    <!--<h1>{{poruka}}</h1>-->
+    <!--<h2>heeeeeeeeeeeeeeeeeeeeeeeeeeeej</h2>-->
+    <!--<h2>{{username}}</h2>-->
     <md-tabs md-dynamic-height
              md-border-bottom>
         <md-tab label="Osnovno">
