--- a/src/main/resources/static/js/app/loginA.html
+++ b/src/main/resources/static/js/app/loginA.html
@@ -1,4 +1,4 @@
-<div layout-gt-sm="row"  layout="row" layout-align="center center"
+<div layout-gt-sm="column"  layout="column" layout-align="center center"
 
      flex
      ng-controller="loginController">
@@ -9,6 +9,7 @@
 
     <!--user user<br/>-->
     <!--admin admin<br/>-->
+    <div layout="row">
     <div layout="column" layout-padding>
         <md-card >
             <md-toolbar class="md-table-toolbar md-default">
@@ -47,8 +48,15 @@
                     <md-button ng-click="toggleRegistracija()"
                                class="md-alternate" translate="REGISTRATION">Register</md-button>
                     <md-button ng-click="login()"
-                               ng-disabled="!loginForm.$valid"
-                               class="md-primary" TRANSLATE="SUBMIT">Submit</md-button>
+                               ng-disabled="!loginForm.$valid&&!loginProgress"
+                               class="md-primary">
+                        <span TRANSLATE="SUBMIT">Submit</span>
+                        <md-progress-linear md-mode="indeterminate" ng-show="loginProgress"></md-progress-linear>
+                    </md-button>
+                    <!--<md-button>-->
+                        <!--&lt;!&ndash;<md-progress-circular md-diameter="20px" md-mode="indeterminate"></md-progress-circular>&ndash;&gt;-->
+                        <!--<md-progress-linear md-mode="indeterminate"></md-progress-linear>-->
+                    <!--</md-button>-->
                 </div>
 
             </div>
@@ -60,7 +68,11 @@
 
             <!--<a href="#/registracija">registracija</a>-->
             <!--<pre>{{korisnik}}</pre>-->
+            <!--<md-card-footer layout-align="center center">-->
+                <!--<prevod-odabir></prevod-odabir>-->
+            <!--</md-card-footer>-->
         </md-card>
+
         <md-card ng-show="resetMailFlag">
             <md-toolbar class="md-table-toolbar md-default">
                 <div class="md-toolbar-tools">
@@ -202,5 +214,6 @@
                        class="md-primary" TRANSLATE="SUBMIT">Submit</md-button>
         </div>
     </md-card>
-    </div>
+    </div></div>
+    <prevod-odabir></prevod-odabir>
 </div>
