--- a/src/main/resources/static/js/app/parts/editKorisnik.html
+++ b/src/main/resources/static/js/app/parts/editKorisnik.html
@@ -53,7 +53,10 @@
                 <input type="text" name="jmbg"
                        ng-model="item.jmbg"/>
             </md-input-container>
-            <md-checkbox ng-model="item.enabled" aria-label="enabled">
+            <md-checkbox ng-model="item.enabled"
+                         ng-true-value="1"
+                         ng-false-value ="0"
+                         aria-label="enabled">
                 Enabled
             </md-checkbox>
         </form>
