popravke + korisnik detalji

--- a/src/main/resources/static/js/app/parts/docListItem.html
+++ b/src/main/resources/static/js/app/parts/docListItem.html
@@ -49,16 +49,16 @@
                                <span md-menu-align-taget>Detalji</span>
                            </md-button>
                        </md-menu-item>
-                       <md-menu-item ng-if="editFlag" aria-label="FAB">
-                           <md-button ng-click="edit(doc)">
-                               <span md-menu-align-taget>Edit</span>
-                           </md-button>
-                       </md-menu-item>
-                       <md-menu-item ng-if="deleteFlag" aria-label="FAB">
-                           <md-button ng-click="delete(doc)">
-                               <span md-menu-align-taget>Delete</span>
-                           </md-button>
-                       </md-menu-item>
+                       <!--<md-menu-item ng-if="editFlag" aria-label="FAB">-->
+                           <!--<md-button ng-click="edit(doc)">-->
+                               <!--<span md-menu-align-taget>Edit</span>-->
+                           <!--</md-button>-->
+                       <!--</md-menu-item>-->
+                       <!--<md-menu-item ng-if="deleteFlag" aria-label="FAB">-->
+                           <!--<md-button ng-click="delete(doc)">-->
+                               <!--<span md-menu-align-taget>Delete</span>-->
+                           <!--</md-button>-->
+                       <!--</md-menu-item>-->
                        <md-menu-divider></md-menu-divider>
                        <md-menu-item ng-if="ocrFlag" aria-label="FAB">
                            <md-button ng-click="ocr(doc)">
