--- a/src/main/resources/static/js/app/files.html
+++ b/src/main/resources/static/js/app/files.html
@@ -8,10 +8,14 @@
         </table>
     </form>-->
     <div class="row">
+        <a ng-href="/publickey" target="_blank">Public key</a>
+    </div>
+    <div class="row">
         <div class="col-lg-12 col-sm-12 col-md-12">
             <ul>
                 <li ng-repeat="dokument in dokumenti">
-                    <a ng-href="/document/{{dokument}}" target="_blank">{{dokument}}</a> <a href="javascript:void(0)" ng-click="delete(dokument)">X</a>
+                    <!--/signature/{fileName:.+}-->
+                    <a ng-href="/document/{{dokument}}" target="_blank">{{dokument}}</a> <a href="javascript:void(0)" ng-click="sign(dokument)">sign</a> <a ng-href="/signature/{{dokument}}" target="_blank">signature</a> <a href="javascript:void(0)" ng-click="delete(dokument)">X</a>
                 </li>
             </ul>
             <input type="file" value="Nova verzija" file-model="file" class="btn btn-default btn-block" />
