--- a/src/main/resources/static/js/app/home/home.html
+++ b/src/main/resources/static/js/app/home/home.html
@@ -2,10 +2,10 @@
 <span  layout="column" flex layout-fill ng-cloak="">
     <md-toolbar md-scroll-shrink>
         <div class="md-toolbar-tools">
-            <span flex="50">Dokumenti</span>
+            <span flex="50" translate="DOCUMENTS">Dokumenti</span>
 
-            <span flex="20">Vlasnik</span>
-            <span flex="20">Azurirano</span>
+            <span flex="20" translate="DOCUMENT.OWNER">Vlasnik</span>
+            <span flex="20" translate="DOCUMENT.UPDATED">Azurirano</span>
             <span flex="10" >
                 <div layout="row" layout-align="end end">
                     <md-button class="md-icon-button" aria-label="FAB">
