--- a/src/main/resources/static/js/app/home/home.html
+++ b/src/main/resources/static/js/app/home/home.html
@@ -171,13 +171,36 @@
                 <md-toolbar>
                     <md-button class="md-icon-button" aria-label="FAB">
                         <md-tooltip>novi komentar</md-tooltip>
-                        <ng-md-icon icon="add" ng-click="newKomentar($event)"
+                        <ng-md-icon icon="add" ng-click="newKomentar($event,odabraniDoc)"
                                     style="fill: black"></ng-md-icon>
                     </md-button>
 
                 </md-toolbar>
                 <md-content>
-                    ispisati komentare
+                    <div ng-repeat="kom in odabraniDoc.komentarSet">
+
+                        <md-card>
+                            <md-card-header ng-if="kom.korisnik.username==trenutniKorisnik.username">
+                                <ng-md-icon icon="person_pin"></ng-md-icon>{{kom.korisnik.username}}
+                                <span flex></span>
+                                <time title="{{ kom.kreiran | amDateFormat: 'dddd, MMMM Do YYYY, h:mm a' }}">
+                                    {{ kom.kreiran | amCalendar }}
+                                </time>
+
+                            </md-card-header>
+                            <md-card-header ng-if="kom.korisnik.username!=trenutniKorisnik.username">
+                                <time title="{{ kom.kreiran | amDateFormat: 'dddd, MMMM Do YYYY, h:mm a' }}">
+                                    {{ kom.kreiran | amCalendar }}
+                                </time>
+                                <span flex></span>
+                                <ng-md-icon icon="person_pin"></ng-md-icon>{{kom.korisnik.username}}
+                            </md-card-header>
+                            <md-card-footer>
+                                {{kom.tekst}}
+                            </md-card-footer>
+                        </md-card>
+
+                    </div>
                 </md-content>
             </md-tab>
             <!--<md-tab>-->
