--- a/src/main/resources/static/js/app/parts/noviKomentarHome.html
+++ b/src/main/resources/static/js/app/parts/noviKomentarHome.html
@@ -5,27 +5,17 @@
     </md-toolbar>
     <md-content class="md-padding">
         <form name="form">
-            <div layout-gt-xs="row">
-                <!--  <md-input-container class="md-block">
-                      <label TRANSLATE="Created"> Kreiran: </label>
-                       <input type="text" name="kreiran"
-                             required
-                             ng-model="item.kreiran"/>
-                      <div ng-messages="form.kreiran.$error">
-                          <div ng-message="required" TRANSLATE="VALIDATION_ERROR.REQUIRED">This is required.</div>
-                      </div>
-                  </md-input-container> -->
-
                 <md-input-container class="md-block">
                     <label TRANSLATE="COMMENT.TEXT"> Tekst: </label>
                     <textarea name="tekst"
                            required
+                              rows="5"
+                              md-select-on-focus=""
                            ng-model="item.tekst"/>
                     <div ng-messages="form.tekst.$error">
                         <div ng-message="required" TRANSLATE="VALIDATION_ERROR.REQUIRED">This is required.</div>
                     </div>
                 </md-input-container>
-            </div>
         </form>
     </md-content>
     <div class="md-actions" layout="row">
