--- a/src/main/resources/static/js/app/parts/noviDokumentHome.html
+++ b/src/main/resources/static/js/app/parts/noviDokumentHome.html
@@ -62,7 +62,7 @@
             </md-input-container>
 
             <md-input-container class="md-block">
-                <md-select name="status" required ng-model="item.selectedStatus" md-on-open="loadStatus()" placeholder="Status*">
+                <md-select name="status" ng-model="item.selectedStatus" md-on-open="loadStatus()" placeholder="Status">
                     <md-option ng-value="status.href" ng-repeat="status in statusiSet">
                         {{status.nazivba}} - {{status.naziven}}
                     </md-option>
