--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -135,7 +135,7 @@
       layout="column"
       ng-controller="indexController">
 
-    <a href="#/user/dokumenti">Docs</a>
+    <!--<a href="#/user/dokumenti">Docs</a>-->
 
 <!--<div nwt-meni ng-show="authenticated"></div>-->
 
