--- a/src/main/resources/static/js/app/home/home.html
+++ b/src/main/resources/static/js/app/home/home.html
@@ -20,6 +20,7 @@
             </span>
         </div>
     </md-toolbar>
+    <a ng-href="/publickey" target="_blank">Public key</a>
     <md-content>
         <md-progress-linear ng-if="flagLoader" md-mode="indeterminate"></md-progress-linear>
         <section>
