--- a/src/main/resources/static/js/app/parts/noviDokumentHome.html
+++ b/src/main/resources/static/js/app/parts/noviDokumentHome.html
@@ -54,7 +54,8 @@
             </md-input-container>
 
             <!--<md-button ng-click="upload(item)">Upload</md-button>-->
-            <input type="file" value="Nova verzija" file-model="item.file" class="btn btn-default btn-block" />
+            <input type="file" value="Nova verzija" file-model="item.file"
+                   class="btn btn-default btn-block" />
             <md-button ng-click="ocr(item)">OCR</md-button>
             <md-button ng-click="potpis(item)">Potpis?</md-button>
         </form>
