--- a/src/main/resources/static/js/app/parts/docListItem.html
+++ b/src/main/resources/static/js/app/parts/docListItem.html
@@ -28,7 +28,7 @@
 
         <!--<a href="javascript:void(0);" ng-click="">sign</a>-->
         <!-- -&#45;&#45;-->
-        <a ng-href="/signature/{{doc.oznaka}}" target="_blank">
+        <a ng-href="/signature/{{doc.oznaka}}" target="_blank" ng-show="flagPotpisan">
             <md-button class="md-icon-button"  aria-label="FAB">
                 <md-tooltip>potpisani fajl</md-tooltip>
                 <ng-md-icon icon="file_download" style="fill: red"></ng-md-icon>
@@ -36,8 +36,8 @@
             </md-button>
         </a>
 
-        <div>oznaka: {{doc.oznaka}}</div>
-        <div>tekst: {{doc.tekst}}</div>
+        <div>{{doc.oznaka}}</div>
+        <div>&nbsp;&nbsp;tekst: {{doc.tekst}}</div>
 
 
 
@@ -82,18 +82,20 @@
                                <!--<span md-menu-align-taget>Delete</span>-->
                            <!--</md-button>-->
                        <!--</md-menu-item>-->
-                       <md-menu-divider></md-menu-divider>
-                       <md-menu-item ng-if="ocrFlag" aria-label="FAB">
-                           <md-button ng-click="ocr(doc)">
-                               <span md-menu-align-taget>Ocr</span>
-                           </md-button>
-                       </md-menu-item>
-                       <md-menu-divider></md-menu-divider>
-                       <md-menu-item  aria-label="FAB">
-                           <md-button ng-click="potpis(doc.oznaka)">
-                               <span md-menu-align-taget>potpis</span>
-                           </md-button>
-                       </md-menu-item>
+                       <!--<span ng-if="!$scope.flagPotpisan">-->
+                               <md-menu-divider ng-hide="flagPotpisan"></md-menu-divider>
+                               <!--<md-menu-item ng-if="ocrFlag" aria-label="FAB">-->
+                                   <!--<md-button ng-click="ocr(doc)">-->
+                                       <!--<span md-menu-align-taget>Ocr</span>-->
+                                   <!--</md-button>-->
+                               <!--</md-menu-item>-->
+                               <!--<md-menu-divider></md-menu-divider>-->
+                               <md-menu-item  aria-label="FAB" ng-hide="flagPotpisan">
+                                   <md-button ng-click="potpis(doc)">
+                                       <span md-menu-align-taget>Potpisi</span>
+                                   </md-button>
+                               </md-menu-item>
+                           <!--</span>-->
                        <!--<md-menu-divider></md-menu-divider>-->
                        <!--<md-menu-item ng-if="uploadFlag" aria-label="FAB">-->
                            <!--<md-button ng-click="upload(doc)">-->
