--- a/src/main/resources/static/js/app/home/home.html
+++ b/src/main/resources/static/js/app/home/home.html
@@ -34,6 +34,7 @@
                         <!--<pre>{{doc.tekst}}</pre>-->
                     <doc-list-item doc="doc"
                                    sign="potpis(doc)"
+                                   reload-n="loadStuff()"
                                    details="otvoriDetalje(doc)"></doc-list-item>
                         </span>
                     <!--<md-divider ng-if="!$last"></md-divider>-->
